Changelog
=========

1.2.4 (unreleased)
------------------

- Nothing changed yet.


1.2.3 (2013-03-04)
------------------

- Removed hard-coded styling for calendar popup icon. Leave this to the dateinput.css
  from plone.app.jquerytools, which was being applied anyway.
  [smcmahon]


1.2.2 (2013-01-13)
------------------

 * Fixes potential round trip traceback when converting the date(time)
   values to a date(time) object. Happens if integrated with
   collective.z3cform.wizard.
   https://github.com/collective/collective.z3cform.datetimewidget/issues/2
   [romanofski]


1.2.1 (2012-10-10)
------------------

 * Make sure DOM is ready before activating the dateinput jQuery plugin.
   This was causing Internet Explorer 7 to fail.
   [rafaelbco]


1.2.0 (2012-06-15)
------------------

 * Fix day names. Also respect the first day of the week from the current
   locale. This fixes http://code.google.com/p/dexterity/issues/detail?id=272
   [davisagli]

 * Use viewpagetemplatefile from zope.browserpage. This breaks compatibility
   with Zope < 2.13 and Plone < 4.1 in order to minimize dependencies.
   [hannosch]

1.1.1 (2011-09-24)
------------------

 * Fix conditional for the GS profile.
   [davisagli]

1.1 (2011-09-12)
----------------

 * Fix validation errors so they are caught and correctly reported by z3c.form.
   [davisagli]

 * Added a GS profile (conditionally loaded in configure.zcml if generic
   setup is installed) to enable the plone.app.jquerytools css & js support
   for dateinput popup.
   [smcmahon]

 * Made js for dateinput popup check for jQuery().dateinput before invoking
   it. Changed from $ to jQuery.
   [smcmahon]

 * IE was baulking on a missing closing parenthesis.
   [danjacka]


1.0.5 (2011-06-28)
------------------

 * Change more $ to jQuery.
   [danjacka]

 * Fix month selection issue with the date input widget.  Previously, due
   to the leading zero, months < 10 weren't being selected when picking a
   date on the calendar widget.